fixed nav bar spacing issues

--- a/css/media1280.css
+++ b/css/media1280.css
@@ -1,6 +1,6 @@
 @media (min-width: 1181px) and (max-width: 1280px) {
 	#nav.span6 {
-		max-width:700px;
+		max-width:720px;
 	}
 	#nav, #login-tag {
 		font-size: 15px;
